# military-detection

./: pyproject.toml  raw.ipynb
